deploy: a58f916186548be02a5917994b7aacc9e82a6d7a

--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="introducción"><a class="header" href="#introducción">Introducción</a></h1>
-<p>Ejemplos de código y prácticas para del curso de &quot;Programación de Aplicaciones Telemáticas&quot;. Algunos de ellos pueden ejecutarse desde esta misma web (los basados en Javascript, CSS y HTML). El resto se puede ejecutar desde <a href="https://github.com/features/codespaces">Github Codespaces</a> o bien en local usando contenedores <a href="https://www.docker.com/">Docker</a>. Para la descarga y entrega de prácticas se utilizará <a href="https://git-scm.com/">Git</a>.</p>
-<p>Las preguntas de las prácticas pueden contestarse desde la misma web, haciendo doble click sobre ellas, y luego imprimiendo la página para entregarlas como PDF. También se puede marcar los pasos completados en cada práctica al hacer doble click sobre ellos.</p>
+<p>Ejemplos de código y prácticas para la asignatura &quot;Programación de Aplicaciones Telemáticas&quot;. Algunos de ellos pueden ejecutarse desde esta misma web (los basados en Javascript, CSS y HTML). El resto se puede ejecutar desde <a href="https://github.com/features/codespaces">Github Codespaces</a> o bien en local usando contenedores <a href="https://www.docker.com/">Docker</a>. Para la descarga y entrega de prácticas se utilizará <a href="https://git-scm.com/">Git</a>.</p>
+<p>Las preguntas de las prácticas pueden contestarse desde la misma web, haciendo click sobre su icono, y luego imprimiendo la página para entregarlas como PDF. También se puede marcar los pasos completados en cada práctica al hacer clicar sobre ellos.</p>
 
                     </main>
 
