--- a/intro/docker/orquestacion.html
+++ b/intro/docker/orquestacion.html
@@ -151,6 +151,7 @@
                         <h1 id="docker"><a class="header" href="#docker">Docker</a></h1>
 <h2 id="orquestación"><a class="header" href="#orquestación">Orquestación</a></h2>
 <p>Un servicio real suele componerse de varios componentes (servidores web, backends, bases de datos, brokers de mensajes, etc.). En una arquitectura de microservicios esos componentes se despliegan como contenedores, y es necesario coordinar su arranque y comunicación. En un entorno real se utiliza <a href="https://kubernetes.io/">Kubernetes</a>, pero para probar en un entorno local se suele usar <a href="https://docs.docker.com/compose/">Docker Compose</a>.</p>
+<p><task-list title="Práctica Docker - Ejercicio 1 de 4 - Orquestación"></task-list></p>
 <ul>
 <li><input disabled="" type="checkbox"/>
 <p>Crea el fichero <code>practicas/ci-cd/docker-compose.yml</code> con este contenido:</p>
