--- a/intro/git/cd.html
+++ b/intro/git/cd.html
@@ -151,6 +151,7 @@
                         <h1 id="git"><a class="header" href="#git">Git</a></h1>
 <h2 id="cd"><a class="header" href="#cd">CD</a></h2>
 <p>El despliegue continuo permite instalar automáticamente los cambios una vez que estos han superado todas las pruebas.</p>
+<p><task-list title="Práctica Git - Ejercicio 5 de 6 - CD"></task-list></p>
 <ul>
 <li><input disabled="" type="checkbox"/>
 <p>Entra en la configuración de Github-Pages del repo (<code>https://github.com/{usuario}/ci-cd/settings/pages</code>) <code>➜</code> &quot;Source&quot; <code>➜</code> &quot;GitHub Actions&quot; <code>➜</code> &quot;Static HTML&quot; <code>➜</code> &quot;Configure&quot;. Renombra el workflow a <code>cd.yml</code> y modifica las siguientes propiedades de su contenido:</p>
