--- a/intro/git/gitflow.html
+++ b/intro/git/gitflow.html
@@ -151,6 +151,7 @@
                         <h1 id="git"><a class="header" href="#git">Git</a></h1>
 <h2 id="git-flow"><a class="header" href="#git-flow">Git flow</a></h2>
 <p>Es el convenio elegido por el equipo de desarrollo para organizar el uso de las ramas del repo. Github-Flow es uno de ellos y propone: ❶ la rama <code>main</code> siempre tiene el código válido y desplegable, ❷ los cambios se hacen en ramas nuevas desde <code>main</code>, ❸ las Pull Requests (PR) permiten solicitar la incorporación de los cambios en <code>main</code>, ❹ tras la revisión de la PR, los cambios se mezclan en <code>main</code>.</p>
+<p><task-list title="Práctica Git - Ejercicio 3 de 6 - Git flow"></task-list></p>
 <ul>
 <li><input disabled="" type="checkbox"/>
 Desde el terminal del Codespace anterior teclea:
