--- a/tema1/paradigmas/funcional.html
+++ b/tema1/paradigmas/funcional.html
@@ -160,7 +160,7 @@
 console.log(max([1, 2, 3, 4, 5]));
 </code></pre>
 <blockquote>
-<p>🔍 <strong>Nota:</strong> <em><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/Reduce">documentación</a> de <code>array.reduce</code></em></p>
+<p>🔍 <strong>Nota:</strong> <em><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/Reduce">documentación</a> de</em> <code>array.reduce</code>.</p>
 </blockquote>
 </details>
 <details><summary>Playground...</summary>
