--- a/tema1/paradigmas/reactiva.html
+++ b/tema1/paradigmas/reactiva.html
@@ -167,7 +167,7 @@ fromEvent(button, &quot;click&quot;)
   });
 </code></pre>
 <blockquote>
-<p>🔍 <strong>Nota:</strong> <em><a href="https://rxjs.dev/guide/overview">documentación</a> de <code>rxjs</code></em></p>
+<p>🔍 <strong>Nota:</strong> <em><a href="https://rxjs.dev/guide/overview">documentación</a> de</em> <code>rxjs</code>.</p>
 </blockquote>
 </details>
 <details><summary>Playground...</summary>
