--- a/intro/docker/contenedor.html
+++ b/intro/docker/contenedor.html
@@ -151,6 +151,7 @@
                         <h1 id="docker"><a class="header" href="#docker">Docker</a></h1>
 <h2 id="contenedor"><a class="header" href="#contenedor">Contenedor</a></h2>
 <p>Los contenedores se arrancan a partir del nombre de la imagen. Los contenedores ejecutan un único proceso y cuando éste termina se detiene el contenedor. Los contenedores parados se pueden volver a arrancar sin perder sus datos entre reinicios. Además, pueden compartir ficheros con el SO anfitrión.</p>
+<p><task-list title="Práctica Docker - Ejercicio 1 de 4 - Contenedor"></task-list></p>
 <ul>
 <li><input disabled="" type="checkbox"/>
 <p>Con Docker arrancando, ejecuta desde un terminal:</p>
