deploy: e760a0c26648a92a001b52b3182cba28d499eb60

--- a/intro/docker/entorno.html
+++ b/intro/docker/entorno.html
@@ -151,7 +151,7 @@
                         <h1 id="docker"><a class="header" href="#docker">Docker</a></h1>
 <h2 id="entorno-desarrollo"><a class="header" href="#entorno-desarrollo">Entorno desarrollo</a></h2>
 <p>En general, los repositorios de software contienen un <code>Dockerfile</code> para su construcción, distribución y despliegue, y un <code>docker-compose.yml</code> que arranca un entorno local para poder probar. Vamos a subir el <code>docker-compose.yml</code> al repo de <code>ci-cd</code>. Para ello nos faltaría configurar nuestras credenciales de Git en el contenedor <code>git</code>.</p>
-<p><task-list title="Práctica Docker - Ejercicio 4 de 4 - Entorno"></task-list></p>
+<p><task-list title="Práctica Docker - Entregable 4 de 4 - Entorno"></task-list></p>
 <ul>
 <li><input disabled="" type="checkbox"/>
 <p>Con Docker arrancando, ejecuta desde un terminal:</p>
