--- a/intro/git/ci.html
+++ b/intro/git/ci.html
@@ -151,7 +151,7 @@
                         <h1 id="git"><a class="header" href="#git">Git</a></h1>
 <h2 id="ci"><a class="header" href="#ci">CI</a></h2>
 <p>La integración continua consiste en la ejecución automática de pruebas y la obtención de sus informes cada vez que cambia el código.</p>
-<p><task-list title="Práctica Git - Ejercicio 4 de 6 - CI"></task-list></p>
+<p><task-list title="Práctica Git - Entregable 4 de 6 - CI"></task-list></p>
 <ul>
 <li><input disabled="" type="checkbox"/>
 <p>Crea un nuevo workflow llamado <code>ci.yml</code> desde las Github-Actions del repo (<code>https://github.com/{usuario}/ci-cd/actions/new</code>) <code>➜</code> &quot;set up a workflow yourself&quot; con el siguiente contenido:</p>
