--- a/intro/git/cicd.html
+++ b/intro/git/cicd.html
@@ -151,7 +151,7 @@
                         <h1 id="git"><a class="header" href="#git">Git</a></h1>
 <h2 id="cicd"><a class="header" href="#cicd">CI/CD</a></h2>
 <p>Combinando ambos procesos es posible automatizar los despliegues de nuevas versiones con la certeza de que no tienen fallos y que, en caso de haberlos, se impida la integración de los cambios y su despliegue.</p>
-<p><task-list title="Práctica Git - Ejercicio 6 de 6 - CI/CD"></task-list></p>
+<p><task-list title="Práctica Git - Entregable 6 de 6 - CI/CD"></task-list></p>
 <ul>
 <li><input disabled="" type="checkbox"/>
 Modifica esta sección del workflow de CI con:
