--- a/intro/git/ramas.html
+++ b/intro/git/ramas.html
@@ -151,7 +151,7 @@
                         <h1 id="git"><a class="header" href="#git">Git</a></h1>
 <h2 id="ramas"><a class="header" href="#ramas">Ramas</a></h2>
 <p>Los cambios en Git se realizan utilizando ramas. Las ramas representan una línea de desarrollo independiente dentro del repo. La rama inicial suele llamarse <code>main</code> (o <code>master</code>). Los cambios en una rama se realizan en 3 pasos: <code>① add ➜ ② commit ➜ ③ push</code>.</p>
-<p><task-list title="Práctica Git - Ejercicio 2 de 6 - Ramas"></task-list></p>
+<p><task-list title="Práctica Git - Entregable 2 de 6 - Ramas"></task-list></p>
 <ul>
 <li><input disabled="" type="checkbox"/>
 <p>Desde el Codespace anterior y usando el editor crea un nuevo directorio <code>src</code> y un fichero <code>index.html</code> dentro de él con el siguiente contenido:</p>
