--- a/intro/git/repositorio.html
+++ b/intro/git/repositorio.html
@@ -151,7 +151,7 @@
                         <h1 id="git"><a class="header" href="#git">Git</a></h1>
 <h2 id="repositorio"><a class="header" href="#repositorio">Repositorio</a></h2>
 <p>Los repositorios alojan el código junto con la metainformación asociada al histórico de cambios. Github proporciona uno basado en el VCS Git como un servicio en la nube.</p>
-<p><task-list title="Práctica Git - Ejercicio 1 de 6 - Repositorio"></task-list></p>
+<p><task-list title="Práctica Git - Entregable 1 de 6 - Repositorio"></task-list></p>
 <ul>
 <li><input disabled="" type="checkbox"/>
 <p>Desde tu cuenta personal de Github crea un nuevo repositorio <strong>público</strong> llamado <code>ci-cd</code> inicializado con un fichero <code>README.md</code>.</p>
