--- a/intro/git/git.html
+++ b/intro/git/git.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Práctica - Programación de aplicaciones telemáticas</title>
+        <title>Git - Programación de aplicaciones telemáticas</title>
 
 
         <!-- Custom HTML head -->
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../index.html">Introducción</a></li><li class="chapter-item expanded "><div>Git</div><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/git/practica.html">Práctica</a></li><li class="chapter-item expanded "><a href="../../intro/git/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/git/repositorio.html">Repositorio</a></li><li class="chapter-item expanded "><a href="../../intro/git/ramas.html">Ramas</a></li><li class="chapter-item expanded "><a href="../../intro/git/gitflow.html">Git flow</a></li><li class="chapter-item expanded "><a href="../../intro/git/ci.html">CI</a></li><li class="chapter-item expanded "><a href="../../intro/git/cd.html">CD</a></li><li class="chapter-item expanded "><a href="../../intro/git/cicd.html">CI/CD</a></li></ol></li><li class="chapter-item expanded "><div>Docker</div><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/docker/practica.html" class="active">Práctica</a></li><li class="chapter-item expanded "><a href="../../intro/docker/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/docker/imagen.html">Imagen</a></li><li class="chapter-item expanded "><a href="../../intro/docker/contenedor.html">Contenedor</a></li><li class="chapter-item expanded "><a href="../../intro/docker/orquestacion.html">Orquestación</a></li><li class="chapter-item expanded "><a href="../../intro/docker/entorno.html">Entorno desarrollo</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 1</li><li class="chapter-item expanded "><div>Paradigmas de programación</div><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema1/paradigmas/estructurada.html">Estructurada</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/procedural.html">Imperativa - Procedural</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/objetos.html">Imperativa - Orientada a objetos</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/funcional.html">Declarativa - Funcional</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/reactiva.html">Declarativa - Reactiva</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../index.html">Introducción</a></li><li class="chapter-item expanded "><a href="../../intro/git/git.html" class="active">Git</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/git/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/git/repositorio.html">Repositorio</a></li><li class="chapter-item expanded "><a href="../../intro/git/ramas.html">Ramas</a></li><li class="chapter-item expanded "><a href="../../intro/git/gitflow.html">Git flow</a></li><li class="chapter-item expanded "><a href="../../intro/git/ci.html">CI</a></li><li class="chapter-item expanded "><a href="../../intro/git/cd.html">CD</a></li><li class="chapter-item expanded "><a href="../../intro/git/cicd.html">CI/CD</a></li></ol></li><li class="chapter-item expanded "><a href="../../intro/docker/docker.html">Docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/docker/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/docker/imagen.html">Imagen</a></li><li class="chapter-item expanded "><a href="../../intro/docker/contenedor.html">Contenedor</a></li><li class="chapter-item expanded "><a href="../../intro/docker/orquestacion.html">Orquestación</a></li><li class="chapter-item expanded "><a href="../../intro/docker/entorno.html">Entorno desarrollo</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 1</li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/paradigmas.html">Paradigmas de programación</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema1/paradigmas/estructurada.html">Estructurada</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/procedural.html">Imperativa - Procedural</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/objetos.html">Imperativa - Orientada a objetos</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/funcional.html">Declarativa - Funcional</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/reactiva.html">Declarativa - Reactiva</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 2</li><li class="chapter-item expanded "><a href="../../tema2/http.html">HTTP</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema2/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../tema2/conexiones.html">Conexiones</a></li><li class="chapter-item expanded "><a href="../../tema2/peticiones.html">Peticiones</a></li><li class="chapter-item expanded "><a href="../../tema2/respuestas.html">Respuestas</a></li><li class="chapter-item expanded "><a href="../../tema2/servidor.html">Servidor</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -119,7 +119,7 @@
                         <a href="https://github.com/apicai/web-ejercicios-pat-2023" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/apicai/web-ejercicios-pat-2023/edit/main/src/intro/docker/practica.md" title="Suggest an edit" aria-label="Suggest an edit">
+                        <a href="https://github.com/apicai/web-ejercicios-pat-2023/edit/main/src/intro/git/git.md" title="Suggest an edit" aria-label="Suggest an edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
 
@@ -148,34 +148,42 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="docker"><a class="header" href="#docker">Docker</a></h1>
-<p><strong>Docker</strong> es el gestor de contenedores más popular. Un <strong>contenedor</strong> es un paquete que incluye todo lo necesario para ejecutar de manera independiente un programa. Los contenedores se ejecutan<sup class="footnote-reference"><a href="#1">1</a></sup> de forma aislada y virtualizada de modo que su programa solo ve los recursos asignados al contenedor. Esto permite distribuir<sup class="footnote-reference"><a href="#2">2</a></sup> el software garantizando el mismo comportamiento en todos los entornos, orquestar el despliegue de varios contenedores conformando un servicio y automatizar la asignación 
-de recursos en función de la carga (escalado horizontal)<sup class="footnote-reference"><a href="#3">3</a></sup>.</p>
-<h2 id="práctica-objetivos"><a class="header" href="#práctica-objetivos">Práctica: objetivos</a></h2>
+                        <h1 id="git"><a class="header" href="#git">Git</a></h1>
+<p><strong>Git</strong> es un sistema de control de versiones (VCS) basado en el uso de ramas para gestionar los cambios. <strong>Github</strong> es un servicio de alojamiento de código que usa Git como VCS y sobre el que se ofrecen otras funcionalidades relacionadas con el desarrollo colaborativo de software.</p>
+<h2 id="objetivos"><a class="header" href="#objetivos">Objetivos</a></h2>
 <ul>
-<li>Usar Docker desde la línea de comandos para crear imágenes y arrancarlas localmente como contenedores.</li>
-<li>Usar Docker Compose para montar un entorno de desarrollo local que nos permita hacer lo mismo que en la práctica de Git (que usaba el entorno de desarrollo en la nube Github-Codespaces).</li>
-<li>Tener un entorno de desarrollo local con las herramientas necesarias para las prácticas (<code>git</code>, <code>java</code>, validadores, servidores, etc.).</li>
+<li>
+<p>Usar Git desde la línea de comandos<sup class="footnote-reference"><a href="#1">1</a></sup> para gestionar los cambios.</p>
+</li>
+<li>
+<p>Usar Github para simular un flujo de trabajo colaborativo<sup class="footnote-reference"><a href="#2">2</a></sup> configurado con una integración y despliegue continuos (CI/CD)<sup class="footnote-reference"><a href="#3">3</a></sup>.</p>
+</li>
+<li>
+<p>Crear una página web estática y publicarla en Internet<sup class="footnote-reference"><a href="#4">4</a></sup>.</p>
+</li>
 </ul>
 <div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
-<p>Existen varios &quot;runtimes&quot;, el que usa Docker está basado originalmente en <a href="https://containerd.io/">containerd</a>.</p>
+<p>Usando el entorno de desarrollo en la nube <a href="https://github.com/features/codespaces">Github-Codespaces</a>.</p>
 </div>
 <div class="footnote-definition" id="2"><sup class="footnote-definition-label">2</sup>
-<p>El formato en que se distribuye se llama imagen, y el que usa Docker está basado en <a href="https://opencontainers.org/">OCI</a>.</p>
+<p>Basado en el propuesto por <a href="https://docs.github.com/en/get-started/quickstart/github-flow">GitHub-Flow</a>.</p>
 </div>
 <div class="footnote-definition" id="3"><sup class="footnote-definition-label">3</sup>
-<p><a href="https://kubernetes.io/">Kubernetes</a> es la plataforma más popular que gestiona la infraestructura hardware subyacente como un único recurso computacional que corre contenedores.</p>
+<p>Usando las <a href="https://github.com/features/actions">GitHub-Actions</a>.</p>
+</div>
+<div class="footnote-definition" id="4"><sup class="footnote-definition-label">4</sup>
+<p>Alojada en <a href="https://pages.github.com/">Github-Pages</a>.</p>
 </div>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../../intro/git/cicd.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../../index.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next" href="../../intro/docker/prerrequisitos.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="../../intro/git/prerrequisitos.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -185,11 +193,11 @@ de recursos en función de la carga (escalado horizontal)<sup class="footnote-re
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../../intro/git/cicd.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../../index.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next" href="../../intro/docker/prerrequisitos.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="../../intro/git/prerrequisitos.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
