--- a/tema2/prerrequisitos.html
+++ b/tema2/prerrequisitos.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Contenedor - Programación de aplicaciones telemáticas</title>
+        <title>Prerrequisitos - Programación de aplicaciones telemáticas</title>
 
 
         <!-- Custom HTML head -->
@@ -12,30 +12,30 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
 
-        <link rel="icon" href="../../favicon.svg">
-        <link rel="shortcut icon" href="../../favicon.png">
-        <link rel="stylesheet" href="../../css/variables.css">
-        <link rel="stylesheet" href="../../css/general.css">
-        <link rel="stylesheet" href="../../css/chrome.css">
-        <link rel="stylesheet" href="../../css/print.css" media="print">
+        <link rel="icon" href="../favicon.svg">
+        <link rel="shortcut icon" href="../favicon.png">
+        <link rel="stylesheet" href="../css/variables.css">
+        <link rel="stylesheet" href="../css/general.css">
+        <link rel="stylesheet" href="../css/chrome.css">
+        <link rel="stylesheet" href="../css/print.css" media="print">
 
         <!-- Fonts -->
-        <link rel="stylesheet" href="../../FontAwesome/css/font-awesome.css">
-        <link rel="stylesheet" href="../../fonts/fonts.css">
+        <link rel="stylesheet" href="../FontAwesome/css/font-awesome.css">
+        <link rel="stylesheet" href="../fonts/fonts.css">
 
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" href="../../highlight.css">
-        <link rel="stylesheet" href="../../tomorrow-night.css">
-        <link rel="stylesheet" href="../../ayu-highlight.css">
+        <link rel="stylesheet" href="../highlight.css">
+        <link rel="stylesheet" href="../tomorrow-night.css">
+        <link rel="stylesheet" href="../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
-        <link rel="stylesheet" href="../../theme/theme.css">
+        <link rel="stylesheet" href="../theme/theme.css">
 
     </head>
     <body>
         <!-- Provide site root to javascript -->
         <script>
-            var path_to_root = "../../";
+            var path_to_root = "../";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "light";
         </script>
 
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../index.html">Introducción</a></li><li class="chapter-item expanded "><a href="../../intro/git/git.html">Git</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/git/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/git/repositorio.html">Repositorio</a></li><li class="chapter-item expanded "><a href="../../intro/git/ramas.html">Ramas</a></li><li class="chapter-item expanded "><a href="../../intro/git/gitflow.html">Git flow</a></li><li class="chapter-item expanded "><a href="../../intro/git/ci.html">CI</a></li><li class="chapter-item expanded "><a href="../../intro/git/cd.html">CD</a></li><li class="chapter-item expanded "><a href="../../intro/git/cicd.html">CI/CD</a></li></ol></li><li class="chapter-item expanded "><a href="../../intro/docker/docker.html">Docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/docker/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/docker/imagen.html">Imagen</a></li><li class="chapter-item expanded "><a href="../../intro/docker/contenedor.html" class="active">Contenedor</a></li><li class="chapter-item expanded "><a href="../../intro/docker/orquestacion.html">Orquestación</a></li><li class="chapter-item expanded "><a href="../../intro/docker/entorno.html">Entorno desarrollo</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 1</li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/paradigmas.html">Paradigmas de programación</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema1/paradigmas/estructurada.html">Estructurada</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/procedural.html">Imperativa - Procedural</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/objetos.html">Imperativa - Orientada a objetos</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/funcional.html">Declarativa - Funcional</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/reactiva.html">Declarativa - Reactiva</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 2</li><li class="chapter-item expanded "><a href="../../tema2/http.html">HTTP</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema2/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../tema2/conexiones.html">Conexiones</a></li><li class="chapter-item expanded "><a href="../../tema2/peticiones.html">Peticiones</a></li><li class="chapter-item expanded "><a href="../../tema2/respuestas.html">Respuestas</a></li><li class="chapter-item expanded "><a href="../../tema2/servidor.html">Servidor</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../index.html">Introducción</a></li><li class="chapter-item expanded "><a href="../intro/git/git.html">Git</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../intro/git/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../intro/git/repositorio.html">Repositorio</a></li><li class="chapter-item expanded "><a href="../intro/git/ramas.html">Ramas</a></li><li class="chapter-item expanded "><a href="../intro/git/gitflow.html">Git flow</a></li><li class="chapter-item expanded "><a href="../intro/git/ci.html">CI</a></li><li class="chapter-item expanded "><a href="../intro/git/cd.html">CD</a></li><li class="chapter-item expanded "><a href="../intro/git/cicd.html">CI/CD</a></li></ol></li><li class="chapter-item expanded "><a href="../intro/docker/docker.html">Docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../intro/docker/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../intro/docker/imagen.html">Imagen</a></li><li class="chapter-item expanded "><a href="../intro/docker/contenedor.html">Contenedor</a></li><li class="chapter-item expanded "><a href="../intro/docker/orquestacion.html">Orquestación</a></li><li class="chapter-item expanded "><a href="../intro/docker/entorno.html">Entorno desarrollo</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 1</li><li class="chapter-item expanded "><a href="../tema1/paradigmas/paradigmas.html">Paradigmas de programación</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../tema1/paradigmas/estructurada.html">Estructurada</a></li><li class="chapter-item expanded "><a href="../tema1/paradigmas/procedural.html">Imperativa - Procedural</a></li><li class="chapter-item expanded "><a href="../tema1/paradigmas/objetos.html">Imperativa - Orientada a objetos</a></li><li class="chapter-item expanded "><a href="../tema1/paradigmas/funcional.html">Declarativa - Funcional</a></li><li class="chapter-item expanded "><a href="../tema1/paradigmas/reactiva.html">Declarativa - Reactiva</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 2</li><li class="chapter-item expanded "><a href="../tema2/http.html">HTTP</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../tema2/prerrequisitos.html" class="active">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../tema2/conexiones.html">Conexiones</a></li><li class="chapter-item expanded "><a href="../tema2/peticiones.html">Peticiones</a></li><li class="chapter-item expanded "><a href="../tema2/respuestas.html">Respuestas</a></li><li class="chapter-item expanded "><a href="../tema2/servidor.html">Servidor</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -113,13 +113,13 @@
                     <h1 class="menu-title">Programación de aplicaciones telemáticas</h1>
 
                     <div class="right-buttons">
-                        <a href="../../print.html" title="Print this book" aria-label="Print this book">
+                        <a href="../print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
                         </a>
                         <a href="https://github.com/apicai/web-ejercicios-pat-2023" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/apicai/web-ejercicios-pat-2023/edit/main/src/intro/docker/contenedor.md" title="Suggest an edit" aria-label="Suggest an edit">
+                        <a href="https://github.com/apicai/web-ejercicios-pat-2023/edit/main/src/tema2/prerrequisitos.md" title="Suggest an edit" aria-label="Suggest an edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
 
@@ -148,51 +148,36 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="docker"><a class="header" href="#docker">Docker</a></h1>
-<h2 id="contenedor"><a class="header" href="#contenedor">Contenedor</a></h2>
-<p>Los contenedores se arrancan a partir del nombre de una imagen. Los contenedores ejecutan un único proceso y cuando éste termina se detiene el contenedor. Los contenedores parados se pueden volver a arrancar sin perder sus datos entre reinicios. Además, pueden compartir ficheros con el SO anfitrión.</p>
-<p><task-list title="Práctica Docker - Entregable 2 de 4 - Contenedor"></task-list></p>
-<ul>
-<li><input disabled="" type="checkbox"/>
-<p>Con Docker arrancando, ejecuta desde un terminal:</p>
-<pre><code class="language-bash">docker run --name git -v $(pwd):/practicas:rw -it git
-# ... dentro del contenedor ...
-cd /practicas
-git clone https://github.com/{usuario}/ci-cd
-exit
+                        <h1 id="http"><a class="header" href="#http">HTTP</a></h1>
+<h2 id="prerrequisitos"><a class="header" href="#prerrequisitos">Prerrequisitos</a></h2>
+<p>Para los ejercicios es necesario un terminal con los comandos <code>telnet</code>, <code>openssl</code>, <code>nc</code> y <code>curl</code> disponibles. Para ello, se puede usar un terminal de Github-Codespaces o el de un contenedor de Docker.</p>
+<h3 id="codespaces"><a class="header" href="#codespaces">Codespaces</a></h3>
+<ol>
+<li>Desde tu cuenta en Github <a href="https://github.com/codespaces/new">crea</a> un Codespace en el repo <code>github/codespaces-blank</code> y arráncalo.</li>
+<li>En el terminal del Codespace ejecuta:
+<pre><code class="language-bash">sudo apt update &amp;&amp; sudo apt install -y telnet netcat
 </code></pre>
 </li>
-<li><input disabled="" type="checkbox"/>
-<p>Comprueba que también se ha creado <code>practicas/ci-cd/</code> en tu SO anfitrión.</p>
-</li>
-<li><input disabled="" type="checkbox"/>
-<p>Ejecuta en el terminal anterior: </p>
-<pre><code class="language-bash">docker ps --all
-docker start -ai git
-# ... dentro del contenedor de nuevo ...
-exit
+</ol>
+<h3 id="docker"><a class="header" href="#docker">Docker</a></h3>
+<ol>
+<li>Arranca <a href="https://www.docker.com/products/docker-desktop/">Docker Desktop</a>.</li>
+<li>Descarga este <a href="./Dockerfile">Dockerfile</a>.</li>
+<li>En ese directorio abre un terminal y ejecuta:
+<pre><code class="language-bash">docker build -t http . ; docker run -p 8080:8080 --rm -it http
 </code></pre>
 </li>
-<li><input disabled="" type="checkbox"/>
-<p>Explica qué hace concretamente el <code>docker run</code> utilizado. ¿Cuál es el proceso que ejecuta el contenedor al arrancarse? ¿por qué necesitamos el modo <code>rw</code> y no basta con <code>ro</code>?</p>
-</li>
-<li><input disabled="" type="checkbox"/>
-<p>¿Por qué <code>docker ps</code> dice que el contenedor está parado?</p>
-</li>
-<li><input disabled="" type="checkbox"/>
-<p>¿Por qué en la última parte tenemos que usar <code>docker start</code> en vez de <code>docker run</code>? ¿por qué no necesitamos especificar la carpeta compartida con <code>docker start</code>?</p>
-</li>
-</ul>
+</ol>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../../intro/docker/imagen.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../tema2/http.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next" href="../../intro/docker/orquestacion.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="../tema2/conexiones.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -202,11 +187,11 @@ exit
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../../intro/docker/imagen.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../tema2/http.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next" href="../../intro/docker/orquestacion.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="../tema2/conexiones.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
@@ -221,16 +206,16 @@ exit
         </script>
 
 
-        <script src="../../elasticlunr.min.js"></script>
-        <script src="../../mark.min.js"></script>
-        <script src="../../searcher.js"></script>
+        <script src="../elasticlunr.min.js"></script>
+        <script src="../mark.min.js"></script>
+        <script src="../searcher.js"></script>
 
-        <script src="../../clipboard.min.js"></script>
-        <script src="../../highlight.js"></script>
-        <script src="../../book.js"></script>
+        <script src="../clipboard.min.js"></script>
+        <script src="../highlight.js"></script>
+        <script src="../book.js"></script>
 
         <!-- Custom JS scripts -->
-        <script src="../../theme/theme.js"></script>
+        <script src="../theme/theme.js"></script>
 
 
     </body>
